src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BST_BAXTER_ONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by Business Admin to mark the record as Baxter Only(these records would not be picked up by data stage for IMs integration/validation)</description>
        <label>Baxter Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_BOOST_Contact_ID__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <label>BOOST Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country of the Contact.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Contact_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact $ 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Contact_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact $ 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Contact_Date_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Contact_Date_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Contact_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Contact P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Contact_Text_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Contact_Text_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Contact_Text_3__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Contact Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_DAYS_SINCE_LAST_IMS_UPDATE__c</fullName>
        <description>Displays the Number of days since the last update happened by IMS</description>
        <formula>FLOOR(IF(CONTAINS(LastModifiedBy.FirstName, &quot;Integration&quot;), NOW()- LastModifiedDate, 0))</formula>
        <label>Days since Last IMS update</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_External_id__c</fullName>
        <label>External id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Parent_Account__c</fullName>
        <description>Displaying the hierarchy of the Parent Account</description>
        <formula>IF(NOT( Account.ParentId = &apos;&apos;), IMAGE(&apos;/img/icon/accounts16.png&apos;, &apos;Parent Account&apos; )&amp; HYPERLINK(&quot;/&quot;&amp; Account.ParentId , Account.Parent.Name,&quot;_self&quot;) &amp; BR() &amp; IMAGE(&apos;/resource/1475046866000/Level_1&apos;,&apos;Level&apos;) &amp;HYPERLINK(&quot;/&quot;&amp; AccountId , Account.Name ,&quot;_self&quot;)&amp;BR()&amp;IMAGE(&apos;/resource/1475047482000/Level_2&apos;,&apos;LevelII&apos;)&amp; FirstName &amp;&apos; &apos;&amp; LastName ,IMAGE(&apos;/img/icon/accounts16.png&apos;, &apos;Parent Account&apos; )&amp;HYPERLINK(&quot;/&quot;&amp; AccountId , Account.Name ,&quot;_self&quot;)&amp;BR()&amp;IMAGE(&apos;/resource/1475047482000/Level_2&apos;,&apos;LevelII&apos;)&amp; FirstName &amp;&apos; &apos;&amp; LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account - Level One Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Parent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MarketingConsent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_STATUS__c</fullName>
        <description>For Marking the record with different status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baxter Pending Review</fullName>
                </value>
                <value>
                    <fullName>Baxter Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>IMS Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Partially Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Pending Review</fullName>
                </value>
                <value>
                    <fullName>IMS Rejected</fullName>
                </value>
                <value>
                    <fullName>IMS Updated</fullName>
                    <isActive>false</isActive>
                    <label>IMS Updated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_EXTERNAL_ID_1__c</fullName>
        <description>France: Code ADELI National
Belgium: numero INAMI - UCl1</description>
        <externalId>true</externalId>
        <inlineHelpText>France: Code ADELI National
Belgium: numero INAMI - UCl1</inlineHelpText>
        <label>IMS Ind. External Id1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_EXTERNAL_ID_2__c</fullName>
        <description>France: Numero de Conseil de lordre - UCl2</description>
        <externalId>true</externalId>
        <inlineHelpText>France: Numero de Conseil de lordre - UCl2</inlineHelpText>
        <label>IMS Ind. External Id2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_EXTERNAL_ID_3__c</fullName>
        <description>France: Code RPPS - UCl1</description>
        <externalId>true</externalId>
        <inlineHelpText>France: Code RPPS - UCl1</inlineHelpText>
        <label>IMS Ind. External Id3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>IMS COMMON - This is the unique identifier provided by IMS for this Workplace.</description>
        <externalId>true</externalId>
        <label>IMS ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DP_IND_GENDER__c</fullName>
        <description>IMS COM - Male - Female</description>
        <inlineHelpText>IMS COM - Male - Female</inlineHelpText>
        <label>IMS Ind. Gender</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_LANGUAGE_CODE__c</fullName>
        <description>IMS COM - Preferred spoken language of the healthcare professional. The order of the languages in the list should define the order of preferred languages EX: 1.French; 2.Dutch</description>
        <inlineHelpText>IMS COM - Preferred spoken language of the healthcare professional. The order of the languages in the list should define the order of preferred languages EX: 1.French; 2.Dutch</inlineHelpText>
        <label>IMS Ind. Lang Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_PROFESSIONAL_TYPE__c</fullName>
        <description>IMS COM - The primary means of identifying a healthcare professional. The Professional Type has replaced the Class code (TYT) as it offers more granularity. Ex. Physician, Dentist, Nurse, Administrator</description>
        <inlineHelpText>IMS COM - The primary means of identifying a healthcare professional. The Professional Type has replaced the Class code (TYT) as it offers more granularity. Ex. Physician, Dentist, Nurse, Administrator</inlineHelpText>
        <label>IMS Ind. Prof. Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Allied Health Professionals</fullName>
                </value>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Prosthetist</fullName>
                    <isActive>false</isActive>
                    <label>Dental Prosthetist</label>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Midwife</fullName>
                </value>
                <value>
                    <fullName>Non-HCP</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Optician</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paramedical</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Pharmacist Assistant</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                    <isActive>false</isActive>
                    <label>Physician Assistant</label>
                </value>
                <value>
                    <fullName>Researcher/Scientist</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Veterinarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_SPEC_1__c</fullName>
        <description>IMS COM -Primary specialty practiced by the healthcare professional. most cases, the officially recognized specialty However, because this field is mandatory in OneKey, some individuals have a default primary specialty that is not recognized officially</description>
        <inlineHelpText>IMS COM -Primary specialty practiced by the healthcare professional. most cases, the officially recognized specialty However, because this field is mandatory in OneKey, some individuals have a default primary specialty that is not recognized officially</inlineHelpText>
        <label>IMS Ind. Speciality 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal / Digestive Surgery</fullName>
                </value>
                <value>
                    <fullName>Accident &amp; Emergency</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Acute Medicine</fullName>
                </value>
                <value>
                    <fullName>Addictology</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Administrative Director</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Allergology</fullName>
                </value>
                <value>
                    <fullName>Ambulance</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology Nurse</fullName>
                </value>
                <value>
                    <fullName>Anatomical Pathology</fullName>
                </value>
                <value>
                    <fullName>Andrology</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Anesthetic Nurse</fullName>
                </value>
                <value>
                    <fullName>Angiology</fullName>
                </value>
                <value>
                    <fullName>Aprentice Chemist Assistant</fullName>
                </value>
                <value>
                    <fullName>Aviation / Aerospacial Medecine</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>BioMedical Engineer</fullName>
                </value>
                <value>
                    <fullName>Biomedical Technician</fullName>
                </value>
                <value>
                    <fullName>Biophysics</fullName>
                </value>
                <value>
                    <fullName>Biostatistics</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardio Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiothoracic/ Thoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular/Vascular Surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_SPEC_2__c</fullName>
        <description>IMS COM - Additional officially recognized specialty practiced by the healthcare professional. In most cases, it is also an additional specialty in which the HCP graduated.</description>
        <inlineHelpText>IMS COM - Additional officially recognized specialty practiced by the healthcare professional. In most cases, it is also an additional specialty in which the HCP graduated.</inlineHelpText>
        <label>IMS Ind. Speciality 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal / Digestive Surgery</fullName>
                </value>
                <value>
                    <fullName>Abdominal / Digestive  Surgery</fullName>
                </value>
                <value>
                    <fullName>Accident &amp; Emergency</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Acute Medicine</fullName>
                </value>
                <value>
                    <fullName>Addictology</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Administrative Director</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Alcohology</fullName>
                </value>
                <value>
                    <fullName>Allergology</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology Nurse</fullName>
                </value>
                <value>
                    <fullName>Anatomical Pathology</fullName>
                </value>
                <value>
                    <fullName>Anatomy</fullName>
                </value>
                <value>
                    <fullName>Andrology</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Anesthetic Nurse</fullName>
                </value>
                <value>
                    <fullName>Angiology</fullName>
                </value>
                <value>
                    <fullName>Assistant Urology Nurse</fullName>
                </value>
                <value>
                    <fullName>Associate Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Aviation / Aerospacial Medecine</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>BioMedical Engineer</fullName>
                </value>
                <value>
                    <fullName>Biophysics</fullName>
                </value>
                <value>
                    <fullName>Biostatistics</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardio Surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_SPEC_OTHERS__c</fullName>
        <description>Field used to track specialty 3,4,5 from IMS. 
The order of the values would be arranged accordingly to the specialty sequence from IMS data. EX 3.Nurse 4.Emergency 5.Reanimation</description>
        <inlineHelpText>Field used to track specialty 3,4,5 from IMS. 
The order of the values would be arranged accordingly to the specialty sequence from IMS data. EX 3.Nurse 4.Emergency 5.Reanimation</inlineHelpText>
        <label>IMS Ind. Specialty - Others</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal / Digestive Surgery</fullName>
                </value>
                <value>
                    <fullName>Abdominal / Digestive  Surgery</fullName>
                </value>
                <value>
                    <fullName>Accident &amp; Emergency</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Addictology</fullName>
                </value>
                <value>
                    <fullName>Administrative Director</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Allergology</fullName>
                </value>
                <value>
                    <fullName>Anaesthesiology</fullName>
                </value>
                <value>
                    <fullName>Anatomical Pathology</fullName>
                </value>
                <value>
                    <fullName>Andrology</fullName>
                </value>
                <value>
                    <fullName>Angiology</fullName>
                </value>
                <value>
                    <fullName>Aviation / Aerospacial Medecine</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardio Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiothoracic/ Thoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular/Vascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Care of Alcohol Addicts</fullName>
                </value>
                <value>
                    <fullName>Child &amp; Adolescent Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Child Surgery</fullName>
                </value>
                <value>
                    <fullName>Clinical Pharmacology</fullName>
                </value>
                <value>
                    <fullName>Clinical Tomography</fullName>
                </value>
                <value>
                    <fullName>Conservative Dentistry</fullName>
                </value>
                <value>
                    <fullName>Critical Care Medicine</fullName>
                </value>
                <value>
                    <fullName>Dental Implants</fullName>
                </value>
                <value>
                    <fullName>Dental Jaw Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_STATE__c</fullName>
        <description>IMS COM - Situation of the healthcare professional: Active, Inactive, Retired</description>
        <inlineHelpText>IMS COM - Situation of the healthcare professional: Active, Inactive, Retired</inlineHelpText>
        <label>IMS Ind. State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Is opening</fullName>
                    <isActive>false</isActive>
                    <label>Is opening</label>
                </value>
                <value>
                    <fullName>Maternity/Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Reduced Activity</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Temporarily Closed</fullName>
                    <isActive>false</isActive>
                    <label>Temporarily Closed</label>
                </value>
                <value>
                    <fullName>Temporarily Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_IND_STATUS__c</fullName>
        <description>Controlling field for Ind State</description>
        <inlineHelpText>Status of the Individual (Contact) as provided by IMS</inlineHelpText>
        <label>IMS Ind. Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department information for Contact.</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Biomedical/engineering</fullName>
                </value>
                <value>
                    <fullName>Cardiac</fullName>
                </value>
                <value>
                    <fullName>Cath-Lab</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>ICU/CCU</fullName>
                </value>
                <value>
                    <fullName>Infection Control</fullName>
                </value>
                <value>
                    <fullName>Information Technology (IT)</fullName>
                </value>
                <value>
                    <fullName>Internal/General Medicine</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>NICU</fullName>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                </value>
                <value>
                    <fullName>Nutrition</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Pain Management</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Perioperative Services</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Supply Chain/Materials Mgmt</fullName>
                </value>
                <value>
                    <fullName>Surgery/O.R.</fullName>
                </value>
                <value>
                    <fullName>Surgery Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historical_Event_Count__c</fullName>
        <description>This field is created to capture the historical Event count for Belgium only. The data will only be uploaded in BOOST production. The source of the data is the FAST Salesforce Org.</description>
        <label>Historical Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBM_First_Name__c</fullName>
        <label>IBM First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_Last_Name__c</fullName>
        <label>IBM Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_Phone__c</fullName>
        <label>IBM Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_SOURCE_CURRENT__c</fullName>
        <label>IBM source current</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_VABLET_DEVICE_SOURCE__c</fullName>
        <label>IBM Vablet device source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>